fixed slaid show for charts on mobile and desktop.

--- a/styles/desktop-styles/transactions.css
+++ b/styles/desktop-styles/transactions.css
@@ -137,10 +137,25 @@
     font-family: Open Sans, sans-serif;
 }
 
-.carousel-arrow-icon-left {
-    display: none;
-}
+.slideshow-container {
+    width: 100%;
+    height: 30vh;
+  }
+
+.slideshow-container:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
   
-.carousel-arrow-icon-right {
+  /* Hide the images by default */
+  .mySlides {
+    float: left;
+    width: 50%;
+    height: 100%;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
     display: none;
-}
+  }
