--- a/styles/mobile-styles/transactions.css
+++ b/styles/mobile-styles/transactions.css
@@ -204,24 +204,6 @@
     font-family: Open Sans, sans-serif;
 }
 
-/* .carousel-arrow-icon-left {
-    font-size: 50px;
-    margin-left: 10px;
-}
-
-.carousel-arrow-icon-left:hover {
-    cursor: pointer;
-}
-  
-.carousel-arrow-icon-right {
-    font-size: 50px;
-    margin-right: 10px;
-}
-
-.carousel-arrow-icon-right:hover {
-    cursor: pointer;
-} */
-
 /* Slideshow container */
 .slideshow-container {
   position: relative;
@@ -259,42 +241,6 @@
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
 }
 
 /* Fading animation */
